# ai-coding-memory

./: .gitignore  .gitmodules  .gitmodules.template  README.md  SKILL.md  install.sh
.claude/: settings.local.json
cli/: __init__.py  ai_memory.py  ai_memory_init.py
collect/: SKILL.md
collect/scripts/: extract_sessions.py
compile/: SKILL.md
compile/scripts/: crystallize_topics.sh  route_topics.py
config/: default.yml  domain-mapping.example.yml
core/: __init__.py  agents_md_sync.py  compiler.py  config.py  distill_quota.py  frontmatter.py  llm_provider.py  memory_store.py  paths.py  privacy_filter.py  project_key.py  recall_log.py  task_pack.py
distill/: SKILL.md
distill/prompts/: 01_distill_topic.md  01_topic_segmentation.md  02_compile_overview.md  02_coreference.md  03_code_filter.md  04_layer_tagging.md  05_fast_track.md
docs/: design.legacy.md  design.md  install-and-schedule.md  mcp-validation-report.md  p6-reflect-design.md  redesign.md
mcp-server/: SKILL.md  pyproject.toml  server.py
mcp-server/lib/: __init__.py  bm25_index.py  cjk_tokenizer.py  config_loader.py  lazy_trigger.py  paths_ext.py  scope_resolver.py  searcher.py  vector_rerank.py  workspace_detector.py
scripts/: _mcp_validation_runner.py  inject_mcp_config.py
skill/: SKILL.md
tests/: conftest.py  test_bm25_tokenizer.py  test_cjk_tokenizer.py  test_compiled_agents_sync.py  test_compiler.py  test_decay_weight.py  test_fingerprint.py  test_privacy_filter.py  test_recall_boost.py  test_vector_config.py
workflows/: manual-trigger.sh  qoderwork-daily.yml
(+31 files in other folders)
