[project]
name = "ai-coding-memory-mcp-server"
version = "0.1.0"
description = "MCP server exposing layered personal coding knowledge to IDEs"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pyyaml>=6.0",
    "rank_bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
vector = [
    "fastembed>=0.3.0",
    "numpy>=1.24",
]

[tool.setuptools]
# 单文件入口 + lib 包
py-modules = ["server"]
packages = ["lib"]

# 关于依赖：fastmcp（MCP runtime）+ pyyaml（config.yml）+ rank_bm25（纯 Python 检索）
# vector extras 启用本地向量重排（fastembed，可选）
